--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,3 +7,4 @@ layout: base
 <div role="main" class="container">
   {{ content }}
 </div>
+<p>&copy; {{ site.name }} {{ site.time | date: '%Y' }} | All Rights Reserved. </p>
