--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -219,7 +219,7 @@
 	       <!-- Please don't remove this, keep my open source work credited :) -->
 		<p class="theme-by text-muted">
 		  Theme by
-		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a> |
 		  <a href="https://github.com/david-chavarria/david-chavarria.github.io" target="_blank">Sitio hospedado en GitHub</a>
 		</p>
       </div>
