--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -214,11 +214,11 @@
 	    </p>
 	      <!-- Texto open -->
 		<p class="theme-by text-muted">
-		  <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+		  <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Este sitio tiene una licencia <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
 		</p>
 	       <!-- Please don't remove this, keep my open source work credited :) -->
 		<p class="theme-by text-muted">
-		  Theme by
+		  Tema tomado de
 		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a> |
 		  <a href="https://github.com/david-chavarria/david-chavarria.github.io" target="_blank">Sitio hospedado en GitHub</a>
 		</p>
