--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -214,7 +214,7 @@
 	    </p>
 	      <!-- Texto open -->
 		<p class="theme-by text-muted">
-		  <a rel="license" href=""><img alt="Creative Commons License" style="border-width:0" src="" /></a><br />Este sitio tiene una licencia <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+		  <a Este sitio tiene una licencia <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. </a>
 		</p>
 	       <!-- Please don't remove this, keep my open source work credited :) -->
 		<p class="theme-by text-muted">
