--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ img {
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: #404040;
+  color: rgba(255,255,255,0.75);
 }
 
 .navbar-custom .navbar-brand:hover,
