--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 
 <header class="header-section {% if page.bigimg %}has-img{% endif %}">
 {% if page.bigimg %}
-<div class="big-img intro-header">
+<div class="big-img intro-header" style="background-image: url(https://deanattali.com/img/big-imgs/laos-pond1.jpeg);">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
