--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ img {
   }
 }
 
-/* .navbar-custom .avatar-container { 
+.navbar-custom .avatar-container { 
   opacity: 1;
   position: absolute;
   -webkit-transition: opacity 0.5s ease-in-out;
@@ -221,7 +221,6 @@ img {
     width: 100%;
   }
 }
-*/
 /* Multi-level navigation links */
 .navbar-custom .nav .navlinks-container {
   position: relative;
