--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -37,7 +37,7 @@
       </ul>
     </div>
 
-	{% if page.image and (layout.show-avatar or page.show-avatar) %}
+<!--	{% if page.image and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
 	    <a href="{{ site.url }} ">
@@ -54,6 +54,8 @@
 	  </div>
 	</div>
 	{% endif %}
+
+-->
 
   </div>
 </nav>
