--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -220,7 +220,7 @@
 		<p class="theme-by text-muted">
 		  Tema tomado de
 		  <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a> |
-		  <a href="https://github.com/david-chavarria/david-chavarria.github.io" target="_blank">Sitio hospedado en GitHub</a>
+		  <a href="http://blog.historiadata.com" target="_blank">Sitio hospedado en GitHub</a>
 		</p>
       </div>
     </div>
